<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.pes.healthforum.trainer_login"
android:orientation="vertical"
android:id="@+id/container"
android:background="#123456"
android:gravity="center_horizontal">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="127dp"
    android:layout_marginTop="50dp"
    app:srcCompat="@drawable/fitness_hub1"/>

<LinearLayout
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="#c2ffffff"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_tusername"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"

        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_tpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"

        android:hint="@string/password"/>
</LinearLayout>

<Button
    android:id="@+id/button_tlogin"
    android:layout_width="190dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:background="#04ea00"
    android:textColor="#ffffff"
    android:text="@string/login"/>



</LinearLayout>