<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.pes.healthforum.registerTrainer">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo"/>

        <EditText
            android:id="@+id/edittext_tusername"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"

            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_tpassword"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"

            android:hint="@string/password"/>

        <EditText
            android:id="@+id/edittext_tcnf_password"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"

            android:hint="@string/confirm_password"/>

        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"

            android:hint="First Name"/>

        <EditText
            android:id="@+id/edittext_lastname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"

            android:hint="Last Name"/>

        <EditText
            android:id="@+id/edittext_age"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:inputType="number"
            android:hint="Age"/>

        <EditText
            android:id="@+id/edittext_mobile"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:inputType="number"
            android:hint="Mobile"/>

        <EditText
            android:id="@+id/edittext_slot"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:inputType="text"
            android:hint="Time Slot"/>

        <Button
            android:id="@+id/button_tregister"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#04ea00"
            android:textColor="#ffffff"
            android:text="@string/register"/>


    </LinearLayout>
</ScrollView>